force-app/main/default/objects/Funding_Award_Milestone_Measure__c/Funding_Award_Milestone_Measure__c.object-meta.xml
<CustomObject>
    <description>Number of Individual Measures associated with a challenge fund milestone record</description>
    <label>Funding Award Milestone Measure</label>
    <nameField>
        <displayFormat>FAMM-{00000}</displayFormat>
        <label>Funding Award Milestone Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Milestone Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>