force-app/main/default/objects/Funding_Award_Milestone_Measure__c/fields/Funding_Award_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award Milestone</label>
    <referenceTo>Funding_Award_Milestone__c</referenceTo>
    <relationshipLabel>Funding Award Milestone Measures</relationshipLabel>
    <relationshipName>Related_Milestone_Measures</relationshipName>
    <type>Lookup</type>
</CustomField>