force-app/main/default/objects/Funding_Award_Milestone_Measure__c/fields/Installed_Measure_Count__c.field-meta.xml
<CustomField>
    <fullName>Installed_Measure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of the measure type that has been installed, that have been reported against the baseline from Trustmark and synced to salesforce as property measures</inlineHelpText>
    <label>Installed Measure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>