force-app/main/default/objects/Funding_Award_Milestone_Measure__c/fields/Property_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Measure Type</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Funding Award Milestone Measures</relationshipLabel>
    <relationshipName>Funding_Award_Milestone_Measures</relationshipName>
    <type>Lookup</type>
</CustomField>