force-app/main/default/objects/Funding_Award_Milestone_Measure__c/fields/Target_Measure_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Measure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Populated from the parent baselines, baseline measure detail at the time of milestone creation</inlineHelpText>
    <label>Target Measure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>